src/objects/OCIO_Ethics_Form__c.object
<CustomObject>
    <description>This Object is used to document forms for review for the Ethics Law team.</description>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Conflict</fullName>
                </value>
                <value>
                    <fullName>Caution</fullName>
                </value>
                <value>
                    <fullName>Recusal/ Disqualification</fullName>
                </value>
                <value>
                    <fullName>Divestiture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_of_Source__c</fullName>
        <label>Address of Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EthTotal_of_Undefined_Method_of_Payments__c</fullName>
        <label>Total of Undefined Method of Payments</label>
        <summarizedField>OCIO_Ethics_Expense_and_Payment_Detail__c.Amount_of_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>OCIO_Ethics_Expense_and_Payment_Detail__c.Method_of_Payment__c</field>
            <operation>notContain</operation>
            <value>Cash</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OCIO_Ethics_Expense_and_Payment_Detail__c.Method_of_Payment__c</field>
            <operation>notContain</operation>
            <value>In-kind</value>
        </summaryFilterItems>
        <summaryForeignKey>OCIO_Ethics_Expense_and_Payment_Detail__c.Ethics_Form__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ethic_Date_Signed__c</fullName>
        <inlineHelpText>Enter in the date that the employee&apos;s supervisor signed the OGE 278 form.</inlineHelpText>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Additional_Information_Needed__c</fullName>
        <inlineHelpText>Interim Response</inlineHelpText>
        <label>Additional Information Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethics_Approved__c</fullName>
        <label>Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ethics Forms (Attorney)</relationshipLabel>
        <relationshipName>Ethics_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ethics_Cash_Payments_Total__c</fullName>
        <label>Cash Payments Total</label>
        <summarizedField>OCIO_Ethics_Expense_and_Payment_Detail__c.Amount_of_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>OCIO_Ethics_Expense_and_Payment_Detail__c.Method_of_Payment__c</field>
            <operation>equals</operation>
            <value>Cash</value>
        </summaryFilterItems>
        <summaryForeignKey>OCIO_Ethics_Expense_and_Payment_Detail__c.Ethics_Form__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ethics_Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Date_Received_by_Agency__c</fullName>
        <label>Date Received by Agency</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Date_Received_by_Ethics_Team__c</fullName>
        <label>Date Received by Ethics Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Date_Signed_by_Employee__c</fullName>
        <label>Date Signed by Employee</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Date_due_to_Ethics_Team__c</fullName>
        <label>Date due to Ethics Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Date_of_Appointment__c</fullName>
        <label>Date of Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Date_of_Review__c</fullName>
        <label>Date of Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Date_of_Training__c</fullName>
        <label>Date of Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Date_of_Travel__c</fullName>
        <label>Departure Date of Travel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Employee_Notified__c</fullName>
        <label>Employee Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Employee_Phone_Number__c</fullName>
        <formula>Ethics_Employee__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethics_Employee_Title__c</fullName>
        <label>Employee Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethics_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the employee for their form.</description>
        <inlineHelpText>Lookup the employee to relate to their form.</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ethics Forms (Employee)</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ethics_Employee_s_Organization__c</fullName>
        <label>Employee&apos;s Organization</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethics_End_Date_for_Event__c</fullName>
        <label>End Date for Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Ethics_Notified_of_Payment__c</fullName>
        <label>Ethics Notified of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Extension_Comment__c</fullName>
        <label>Extension Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ethics_Extension__c</fullName>
        <label>Extension</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethics_Filers_Waiver_Request__c</fullName>
        <label>Filers Waiver Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ethics_First_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ethics_Forwarded_to_OGE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forwarded to OGE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethics_Identity_of_Source__c</fullName>
        <label>Identity of Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ethics_In_Kind_Payment_Total__c</fullName>
        <label>In-Kind Payment Total</label>
        <summarizedField>OCIO_Ethics_Expense_and_Payment_Detail__c.Amount_of_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>OCIO_Ethics_Expense_and_Payment_Detail__c.Method_of_Payment__c</field>
            <operation>equals</operation>
            <value>In-kind</value>
        </summaryFilterItems>
        <summaryForeignKey>OCIO_Ethics_Expense_and_Payment_Detail__c.Ethics_Form__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ethics_Initial_Contact_with_Filer__c</fullName>
        <label>Initial Contact with Filer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Late_Filing_Fee__c</fullName>
        <label>Late Filing Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethics_Mailed__c</fullName>
        <label>Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_New_Due_Date__c</fullName>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_OEE_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OGE Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethics_OGE_278_Certified_Date__c</fullName>
        <label>OGE 278 Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_OGE_278_Due_Date__c</fullName>
        <label>OGE 278 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Received_Training__c</fullName>
        <label>Received Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethics_Received__c</fullName>
        <label>Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ethics_Reporting_Status__c</fullName>
        <label>Reporting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>New Entrant</fullName>
                </value>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethics_Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Requested__c</fullName>
        <label>Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Required_to_Pay_By__c</fullName>
        <label>Required to Pay By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Return_Date_of_Travel__c</fullName>
        <label>Return Date of Travel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Returned_for_More_Information__c</fullName>
        <label>Returned for More Information</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Review_Completed__c</fullName>
        <label>Review Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>With Supervisor for Review</fullName>
                </value>
                <value>
                    <fullName>Awaiting Review</fullName>
                </value>
                <value>
                    <fullName>Initial Review</fullName>
                </value>
                <value>
                    <fullName>Final Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethics_Second_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ethics Forms (Second Reviewer)</relationshipLabel>
        <relationshipName>Ethics_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ethics_Start_Date_of_Event__c</fullName>
        <label>Start Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Supervisor_Comments__c</fullName>
        <label>Supervisor Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ethics_Supervisor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ethics_Supervisor_Phone_Number__c</fullName>
        <formula>Ethics_Supervisor_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethics_Supervisor_Title__c</fullName>
        <label>Supervisor Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethics_Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_Total_Cost_of_Trip__c</fullName>
        <formula>Ethics_Total_Payments_Received__c  +  Ethics_Total_Cost_to_GSA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to calculate the total for the trip based on cost to GSA and total payments received.</inlineHelpText>
        <label>Total Cost of Trip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ethics_Total_Cost_to_GSA__c</fullName>
        <label>Total Cost to GSA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ethics_Total_Payments_Received__c</fullName>
        <label>Total Payments Received</label>
        <summarizedField>OCIO_Ethics_Expense_and_Payment_Detail__c.Amount_of_Payment__c</summarizedField>
        <summaryForeignKey>OCIO_Ethics_Expense_and_Payment_Detail__c.Ethics_Form__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ethics_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acting</fullName>
                </value>
                <value>
                    <fullName>Career SES</fullName>
                </value>
                <value>
                    <fullName>Excepted</fullName>
                </value>
                <value>
                    <fullName>Expert/ Consultant</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Non- Career SES</fullName>
                </value>
                <value>
                    <fullName>PAS</fullName>
                </value>
                <value>
                    <fullName>Schedule C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethics_Type_of_Information__c</fullName>
        <label>Type of Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethics_Type_of_Training__c</fullName>
        <label>Type of Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>New Entrant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethics_Waiver_Granted__c</fullName>
        <label>Waiver Granted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_Needed__c</fullName>
        <label>Information Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Federal source commitment letter</fullName>
                </value>
                <value>
                    <fullName>Memo from the employee&apos;s supervisor</fullName>
                </value>
                <value>
                    <fullName>Official TDY Travel Authorization</fullName>
                </value>
                <value>
                    <fullName>Signature of HSSO/ RA on 87</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_of_Meeting__c</fullName>
        <label>Nature of Meeting</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Places_of_Travel__c</fullName>
        <label>Places of Travel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Position_Description__c</fullName>
        <inlineHelpText>Please attach the position description document to the form if available.</inlineHelpText>
        <label>Position Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_by_DAEO__c</fullName>
        <label>Signed by DAEO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <label>Sponsor</label>
        <type>TextArea</type>
    </fields>
    <label>Ethics Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ethics_Employee__c</columns>
        <columns>Ethics_Review_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Ethics_OGE_278_Due_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_OGE_278_Forms</fullName>
        <columns>NAME</columns>
        <columns>Ethics_Review_Status__c</columns>
        <columns>Ethics_Employee__c</columns>
        <columns>Priority__c</columns>
        <columns>Ethics_OGE_278_Due_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OCIO_Ethics_Form__c.Ethics_OGE_278</value>
        </filters>
        <label>All OGE 278 Forms</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Payment_Forms</fullName>
        <columns>NAME</columns>
        <columns>Ethics_Employee__c</columns>
        <columns>Ethics_OGE_278_Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Ethics_Review_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OCIO_Ethics_Form__c.Ethics_Payment_from_a_Non_Federal_Source</value>
        </filters>
        <label>All Payment from a Non-Fed Source Forms</label>
    </listViews>
    <listViews>
        <fullName>Forms_for_Review</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ethics_Employee__c</columns>
        <columns>Ethics_Date_Signed_by_Employee__c</columns>
        <columns>Ethics_Reporting_Status__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Queue</filterScope>
        <label>Forms for Review</label>
        <queue>FormsforReview</queue>
    </listViews>
    <nameField>
        <displayFormat>Form {00000}</displayFormat>
        <label>Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ethics Forms</pluralLabel>
    <recordTypes>
        <fullName>Ethics_OGE_278</fullName>
        <active>true</active>
        <description>This form is used for the review of GSA employee&apos;s OGE 278 forms.</description>
        <label>OGE 278</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ethics_Payment_from_a_Non_Federal_Source</fullName>
        <active>true</active>
        <description>This form is used for the review of GSA employee&apos;s travel payments from non-federal sources.</description>
        <label>Payment from a Non-Federal Source</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>